css/styles.css
/* ... */
.main-caption-container {
  background-image: url(../img/background-mask.png), url(../img/background.jpg);
  background-repeat: no-repeat, no-repeat;
  background-position: 0 bottom, 0 -57px;
  padding: 75px 0 80px;
}

.main-caption-text {
  display: block;
  margin: 0 auto;
  width: 458px;
}

.site-navigation {
  margin: 0;
  padding: 0;
  list-style: none;
  text-align: center;
  display: flex;
}

.site-navigation li:first-child {
  margin-right: 147px;
}

.site-navigation li:nth-child(3) {
  margin-left: auto;
  margin-right: 164px;
}

.site-navigation li:first-child, .site-navigation li:nth-child(2) {
  text-align: left;
}

.site-navigation li:nth-child(3), .site-navigation li:last-child {
  text-align: right;
}

.site-navigation a {
  color: #333333;
}

.site-navigation a:hover, .site-navigation a:focus {
  color: #81b3d2;
}

.site-navigation a:active {
  color: #000000;
  opacity: 0.3;
}

.site-navigation .current a {
  color: #766357;
}

.site-navigation .current a:hover, .site-navigation .current a:focus {
  cursor: default;
  color: #766357;
}

.advantages {
  background-color: #ffffff;
  padding-top: 62px;
}

.advantages b {
  display: block;
  text-align: center;
  margin: 0 auto 27px;
  width: 50%;
  font-size: 21px;
  font-weight: 700;
}

.advantages-header {
  text-align: center;
  margin: 0 auto 50px;
  width: 50%;
  font-size: 14px;
  font-weight: 400;
  line-height: 26px;
}

.advantages-list {
  display: flex;
  flex-wrap: wrap;
  margin: 0;
  padding: 0;
  list-style: none;
  text-align: center;
}

.advantages-special {
  margin-top: 49px;
  padding: 0 55px 80px;
  max-width: 33.33%;
  box-sizing: border-box;
}

.advantages-special::before {
  display: inline-block;
  vertical-align: top;
  content: "";
  width: 90px;
  height: 90px;
  background-repeat: no-repeat;
  background-position: center;
  margin-bottom: 21px;
}

.advantages-special-header {
  margin: 0;
  hyphens: auto;
  font-size: 21px;
  font-weight: 700;
  line-height: 21px;
  margin-bottom: 25px;
}

.advantages-special-description {
  margin: 0;
  line-height: 21px;
}

.advantages-item {
  max-width: 33.33%;
  box-sizing: border-box;
  background-color: #f2f2f2;
  padding: 45px 60px 60px;
  position: relative;
}

.advantages-item-header {
  margin: 0 90px 25px;
  font-size: 21px;
  font-weight: 700;
  line-height: 21px;
  hyphens: auto;
}

.advantages-item-number {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  margin-bottom: 15px;
}

.advantages-item-number::before {
  display: block;
  position: absolute;
  width: 8px;
  height: 1px;
  right: -14px;
  top: 11px;
  content: "";
  border-bottom: 1px solid white;
}

.advantages-item-number::after {
  display: block;
  position: absolute;
  width: 8px;
  height: 1px;
  left: -14px;
  top: 11px;
  content: "";
  border-bottom: 1px solid white;
}

.advantages-item-description {
  padding: 0;
  margin: 0;
  line-height: 21px;
}

.advantages-item:nth-child(6), .advantages-item:nth-child(7), .advantages-item:nth-child(8) {
  padding: 48px 68px 56px;
}

.advantages-item:nth-child(6) .advantages-item-header, .advantages-item:nth-child(7) .advantages-item-header, .advantages-item:nth-child(8) .advantages-item-header {
  margin: 0 70px 22px;
}

.advantages-item:nth-child(6) .advantages-item-number, .advantages-item:nth-child(7) .advantages-item-number, .advantages-item:nth-child(8) .advantages-item-number {
  margin-bottom: 18px;
}

.advantages-item:nth-child(6) .advantages-item-number::before, .advantages-item:nth-child(7) .advantages-item-number::before, .advantages-item:nth-child(8) .advantages-item-number::before {
  display: block;
  position: absolute;
  width: 8px;
  height: 1px;
  right: -14px;
  top: 11px;
  content: "";
  border-bottom: 1px solid black;
}

.advantages-item:nth-child(6) .advantages-item-number::after, .advantages-item:nth-child(7) .advantages-item-number::after, .advantages-item:nth-child(8) .advantages-item-number::after {
  display: block;
  position: absolute;
  width: 8px;
  height: 1px;
  left: -14px;
  top: 11px;
  content: "";
  border-bottom: 1px solid black;
}

.important {
  padding-top: 47px;
  min-width: 100%;
  background-color: #81b3d2;
  color: #ffffff;
}

.important .advantages-item-header {
  margin: 0 50px 20px;
}

.important .advantages-item-number {
  margin-bottom: 20px;
}

.important-city {
  padding-right: 860px;
}

.important-city::after {
  position: absolute;
  width: 66.666%;
  height: 100%;
  right: 0;
  top: 0;
  content: "";
  background-image: url(../img/real-city.jpg);
  background-position: center;
  background-size: cover;
}

.important-bridge {
  padding-left: 849px;
  padding-right: 49px;
}

.important-bridge::before {
  position: absolute;
  width: 66.666%;
  height: 100%;
  left: 0;
  top: 0;
  content: "";
  background-image: url(../img/dev-bridge.jpg);
  background-position: center;
  background-size: cover;
}

.apartments::before {
  background-image: url(../img/icon-1.svg);
}

.food::before {
  background-image: url(../img/icon-3.svg);
}

.presents::before {
  background-image: url(../img/icon-2.svg);
}

.container {
  width: 33%;
  display: inline-block;
  vertical-align: top;
}

.trip {
  position: relative;
  background-color: white;
  padding-top: 60px;
}

.trip-header {
  text-align: center;
  margin: 0 auto 43px;
  font-weight: 400;
  font-size: 14px;
  width: 70%;
}

.trip b {
  width: 70%;
  display: block;
  text-align: center;
  margin: 0 auto 25px;
  font-size: 30px;
}

.trip-form {
  display: none;
  position: absolute;
  left: 0;
  right: 0;
  border: 0px;
  margin: 0 auto;
  padding: 55px;
  width: 458px;
  min-height: 250px;
  background-color: #ffffff;
  box-shadow: 0 7px 15px rgba(0, 1, 1, 0.15);
}

.trip-form-close {
  display: block;
  animation-duration: 0.5s;
  animation-name: close;
  animation-fill-mode: forwards;
}
/* ... */

